2785 [Nero AAC Encoder]     if VBR is used the profile will automatically be selected
2784 [AVS Script Creator]   fixed DirectShowSource/AVISource not available if the portable AviSynth is used (regression of 2761). bug #896
                            DirectShowSource/AVISource are disabled by default and have to be enabled in the MeGUI settings
2783 [AVS Script Creator]   improved the file extension filters of the "video input" file open dialogue
2782 [L-SMASH Indexer]      delete always the index file after it has been copied (and not only when "delete intermediate files" is selected)(regression of 2757)
2781 [Settings]             removed "improved AVS opening" setting. It is now always enabled.
2780 [Update]               removed the abort button
2779 [Xvid]                 added a workaround to be able to use Xvid in portable AviSynth mode
2778 [Chapter]              fixed non-ASCII handling (regression of 2753). bug #898
2777 [Settings]             changed the default value of "delete completed jobs" to be enabled
2776 [OneClick]             added support for MKV attachments. If the MKV source does have such attachments, it will be copied to the target MKV. feature request #617

Changelog 2715 --> 2774

Features/Changes:
[Chapter]              all MediaInfo supported files and TXT/XML files can be used as chapter files. The muxers will use chapter information from the input video file if available.
                       !!! existing jobs created by older MeGUI builds have to be recreated as otherwise the chapter information is not available !!!
[HD Streams Extractor] added settings menu:
                       - added settings to include the encoding and/or all demuxer "extract as" options. AAC encoding is only available if neroaacenc.exe is found in the eac3to directory.
                       - moved the language track selection option from the global settings into the new menu